[github_notes] feat: i18n structure, ARB en/fr, test key, widget (closes #12)

--- a/apps/github_notes/lib/l10n/app_en.arb
+++ b/apps/github_notes/lib/l10n/app_en.arb
@@ -28,6 +28,10 @@
   "@save": {
     "description": "Save button"
   },
+  "copilotTest": "Copilot test string (en)",
+  "@copilotTest": {
+    "description": "Test string for Copilot i18n setup verification"
+  },
   "cancel": "Cancel",
   "@cancel": {
     "description": "Cancel button"
