--- a/apps/github_notes/lib/l10n/app_fr.arb
+++ b/apps/github_notes/lib/l10n/app_fr.arb
@@ -21,5 +21,44 @@
   "conflictOverwriteRemote": "Écraser sur GitHub",
   "cannotDuplicateLinkedFile": "Impossible de dupliquer un fichier lié à GitHub",
   "cannotDuplicateLinkedFileReason": "Ce fichier est déjà synchronisé avec GitHub. Vous ne pouvez avoir qu'une seule instance locale par fichier GitHub. Envisagez de créer un nouveau fichier à la place.",
-  "copilotTest": "Chaîne de test Copilot (fr)"
+  "copilotTest": "Chaîne de test Copilot (fr)",
+  "tokenSaved": "Jeton GitHub enregistré (sécurisé) — {count} caractères",
+  "@tokenSaved": {
+    "description": "Message affiché après la sauvegarde du token avec la longueur",
+    "placeholders": { "count": {} }
+  },
+  "errorSavingToken": "Erreur lors de la sauvegarde du token : {error}",
+  "@errorSavingToken": {
+    "description": "Message d'erreur lors de la sauvegarde du token",
+    "placeholders": { "error": {} }
+  },
+  "themeSet": "Thème défini sur {mode}",
+  "@themeSet": { "description": "Confirmation du thème défini", "placeholders": { "mode": {} } },
+  "languageSet": "Langue définie sur {lang} (pas encore de traductions)",
+  "@languageSet": { "description": "Confirmation du changement de langue", "placeholders": { "lang": {} } },
+  "tokenValid": "Le token est valide !",
+  "tokenInvalid": "Le token est invalide",
+  "addFileTitle": "Ajouter un fichier à suivre",
+  "ownerLabel": "Propriétaire",
+  "ownerHint": "ex: johndoe ou my-org",
+  "repoLabel": "Dépôt",
+  "repoHint": "ex: myapp",
+  "pathLabel": "Chemin du fichier",
+  "pathHint": "ex: README.md ou _docs/apps/myapp/PROMPT_USER.md",
+  "nicknameLabel": "Surnom",
+  "nicknameHint": "ex: MyApp - Prompt utilisateur",
+  "allFieldsRequired": "Tous les champs sont obligatoires",
+  "duplicateTrackedPath": "Ce chemin GitHub ({owner}/{repo}/{path}) est déjà suivi. Changez le chemin ou le nom du fichier pour créer un doublon.",
+  "fileImported": "Fichier importé depuis GitHub",
+  "fileAddedLocal": "Fichier ajouté (local)",
+  "invalidTokenPleaseUpdate": "Token GitHub invalide. Veuillez le mettre à jour dans les paramètres.",
+  "githubError": "Erreur GitHub ({code}). Veuillez réessayer plus tard.",
+  "@githubError": { "description": "Message d'erreur GitHub avec code", "placeholders": { "code": {} } },
+  "noNetworkFileAdded": "Pas de réseau : fichier ajouté localement. Il sera synchronisé quand en ligne.",
+  "errorCheckingGitHub": "Erreur lors de la vérification GitHub : {error}",
+  "@errorCheckingGitHub": { "description": "Message d'erreur lors de la vérification GitHub", "placeholders": { "error": {} } },
+  "fileAddedSuccessfully": "Fichier ajouté avec succès",
+  "cancel": "Annuler",
+  "add": "Ajouter",
+  "editFileTitle": "Modifier les paramètres du fichier"
 }
