--- a/apps/github_notes/lib/l10n/app_fr.arb
+++ b/apps/github_notes/lib/l10n/app_fr.arb
@@ -60,5 +60,39 @@
   "fileAddedSuccessfully": "Fichier ajouté avec succès",
   "cancel": "Annuler",
   "add": "Ajouter",
-  "editFileTitle": "Modifier les paramètres du fichier"
+  "editFileTitle": "Modifier les paramètres du fichier",
+  "noFilesConfigured": "Aucun fichier configuré",
+  "goToSettings": "Aller dans Paramètres pour ajouter des fichiers",
+  "openSettings": "Ouvrir les paramètres",
+  "errorMessage": "Erreur : {error}",
+  "@errorMessage": { "description": "Message d'erreur avec texte d'erreur", "placeholders": { "error": {} } },
+  "ownerRequired": "Veuillez saisir le propriétaire",
+  "repoRequired": "Veuillez saisir le dépôt",
+  "pathRequired": "Veuillez saisir le chemin du fichier",
+  "nicknameRequired": "Veuillez saisir un surnom",
+  "duplicate": "Dupliquer",
+  "save": "Enregistrer",
+  "settingsTitle": "Paramètres",
+  "testToken": "Tester le token",
+  "saveToken": "Enregistrer le token",
+  "debugTokenTitle": "Debug : token GitHub",
+  "close": "Fermer",
+  "copy": "Copier",
+  "showTokenDebug": "Afficher le token (debug)",
+  "themeTitle": "Thème",
+  "themeSystem": "Système",
+  "themeLight": "Clair",
+  "themeDark": "Sombre",
+  "languageTitle": "Langue",
+  "languageSystem": "Système",
+  "languageSystemDevice": "Système (appareil)",
+  "languageEn": "English",
+  "languageFr": "Français",
+  "deleteFileTitle": "Supprimer le fichier ?",
+  "deleteFileContent": "Supprimer \"{nickname}\" des fichiers suivis ?",
+  "@deleteFileContent": { "description": "Supprimer le dialog avec surnom", "placeholders": { "nickname": {} } },
+  "delete": "Supprimer",
+
+  "justNow": "À l'instant",
+  "@justNow": { "description": "Label pour événement tout récent" }
 }
