[github_notes] feat: add CardMenu widget and unify file card menu

--- a/apps/github_notes/lib/l10n/app_fr.arb
+++ b/apps/github_notes/lib/l10n/app_fr.arb
@@ -71,6 +71,7 @@
   "pathRequired": "Veuillez saisir le chemin du fichier",
   "nicknameRequired": "Veuillez saisir un surnom",
   "duplicate": "Dupliquer",
+  "edit": "Modifier",
   "save": "Enregistrer",
   "settingsTitle": "Paramètres",
   "testToken": "Tester le token",
