--- a/apps/github_notes/lib/l10n/app_en.arb
+++ b/apps/github_notes/lib/l10n/app_en.arb
@@ -77,6 +77,7 @@
   "pathRequired": "Please enter file path",
   "nicknameRequired": "Please enter a nickname",
   "duplicate": "Duplicate",
+  "edit": "Edit",
 
   "@copilotTest": {
     "description": "Test string for Copilot i18n setup verification"
